...
            android:text="@string/delete"
            android:visibility="invisible" />

    </Toolbar>

    <Button
        android:id="@+id/create_courses_button"
        style="@style/button_accent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="createCourses"
...
